Configure frontend for GitHub Pages deployment with live backend

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,9 @@ fastapi
 uvicorn
 python-multipart
 google-generativeai
+langgraph
+langchain-google-genai
+langchain-core
+pydantic
+python-dotenv
+langchain-openai
