--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,17 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://shriprasad15.github.io/Dude-Coders-Ideathon",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@copilotkit/react-core": "1.3.15",
+    "@copilotkit/react-ui": "1.3.15",
     "@react-google-maps/api": "^2.19.2",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
@@ -16,9 +21,11 @@
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
     "tailwind-merge": "^2.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
